[gd_scene load_steps=22 format=2]

[ext_resource path="res://Scenes/Shuttle/1PShip.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Helm.gd" type="Script" id=2]
[ext_resource path="res://assets/pulse1.png" type="Texture" id=3]
[ext_resource path="res://Scripts/1PCombiHelmShip.gd" type="Script" id=4]
[ext_resource path="res://assets/Shuttle.png" type="Texture" id=5]
[ext_resource path="res://assets/HitboxIndicator.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Shuttle/1PNavTerminal.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Players/Player1.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Platform/Radar.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scripts/AnimationPlayer.gd" type="Script" id=10]
[ext_resource path="res://Scripts/Area2D.gd" type="Script" id=11]

[sub_resource type="Animation" id=2]
resource_name = "Pulse"
length = 0.16
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 7, 5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -322.429, -6.00164 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.99, 0.99 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.858824, 0.858824, 0.858824, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -271, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
resource_name = "StopStart"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="CapsuleShape2D" id=9]
radius = 3.40016
height = 47.6009

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "dodge"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Player1:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Node2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../1PShip:collision_layer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 128, 1 ]
}

[sub_resource type="CapsuleShape2D" id=1]
radius = 10.9999
height = 52.0

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "pulse"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.301961 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="CircleShape2D" id=10]
radius = 9.12688

[node name="Node2D" type="KinematicBody2D"]
z_index = 2
script = ExtResource( 4 )

[node name="Engine" type="Area2D" parent="."]
position = Vector2( -1, 1 )
rotation = -1.5708
z_index = -1

[node name="Visible" type="Sprite" parent="Engine"]
visible = false
modulate = Color( 0.858824, 0.858824, 0.858824, 1 )
position = Vector2( -271, 1 )
scale = Vector2( 0.99, 0.99 )
z_index = 2
texture = ExtResource( 3 )
flip_v = true
vframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="Engine/Visible"]
autoplay = "StopStart"
anims/Pulse = SubResource( 2 )
anims/RESET = SubResource( 3 )
anims/StopStart = SubResource( 4 )

[node name="Area2D" type="Area2D" parent="Engine/Visible"]
position = Vector2( 0, 0.6 )
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Engine/Visible/Area2D"]
position = Vector2( 0, 0.409088 )
rotation = 1.5708
shape = SubResource( 9 )

[node name="Base" type="Sprite" parent="Engine"]
position = Vector2( 1, 1 )
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
z_index = 1
texture = ExtResource( 5 )
hframes = 3
vframes = 4

[node name="Node2D" parent="Engine/Base" instance=ExtResource( 9 )]
position = Vector2( -14, 174 )
rotation = 1.5708
scale = Vector2( 0.19697, 0.215152 )
z_index = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Engine/Base"]
anims/RESET = SubResource( 7 )
anims/dodge = SubResource( 8 )
script = ExtResource( 10 )

[node name="1PShip" parent="Engine" instance=ExtResource( 1 )]
position = Vector2( -1, -2.38419e-07 )
rotation = 1.5708

[node name="NavTerminal" parent="Engine" instance=ExtResource( 7 )]
position = Vector2( -5.96046e-08, 1 )
rotation = 1.5708
scale = Vector2( 1, 1 )

[node name="Helm" type="Area2D" parent="Engine"]
position = Vector2( -5.96046e-08, 1 )
rotation = 1.5708
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Engine/Helm"]
position = Vector2( 0, -88 )
rotation = 1.5708
scale = Vector2( 1.00161, 1.00142 )
shape = SubResource( 1 )

[node name="Player1" parent="Engine" instance=ExtResource( 8 )]
position = Vector2( 2, 1.00001 )
rotation = 1.5708
z_index = 3

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1.00002, -3.5 )
scale = Vector2( 1.1125, 1.10312 )
texture = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
autoplay = "pulse"
playback_speed = 0.25
anims/RESET = SubResource( 5 )
anims/pulse = SubResource( 6 )

[node name="Speed" type="Label" parent="."]
margin_left = -21.0
margin_top = -487.0
margin_right = 19.0
margin_bottom = -473.0
custom_colors/font_color = Color( 1, 1, 1, 1 )

[node name="Canvas" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2( 20, 20 )
shape = SubResource( 10 )

[connection signal="area_entered" from="Engine" to="." method="_on_Engine_area_entered"]
[connection signal="area_entered" from="Engine/Helm" to="." method="_on_Helm_area_entered"]
[connection signal="area_exited" from="Engine/Helm" to="." method="_on_Helm_area_exited"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_shape_entered" from="Area2D" to="." method="_on_Area2D_area_shape_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
